--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <section id="about" class="relative overflow-hidden hidden-section ripple-effect bg-gray-900 text-white py-12">
     <!-- Background Video -->
     <video autoplay loop muted class="absolute top-0 left-0 w-full h-full object-cover -z-10 opacity-50">
-        <source src="path_to_your_binary_number_video.mp4" type="video/mp4">
+        <source src="Video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
