--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </div>
         </section>
 <!-- About Section -->
-<section id="about" class="relative bg-gray-900 text-white py-12 overflow-hidden">
+<section id="about" class="relative bg-gray-900 text-white py-12">
     <!-- Background Video -->
     <div class="absolute top-0 left-0 w-full h-full -z-10">
         <video autoplay loop muted class="w-full h-full object-cover opacity-30">
@@ -233,7 +233,6 @@
         </div>
     </div>
 </section>
-
 
 
 
