--- a/index.html
+++ b/index.html
@@ -193,15 +193,16 @@
         </section>
 <!-- About Section -->
 <section id="about" class="relative bg-gray-900 text-white py-12">
+<section id="about" class="relative bg-gray-900 text-white py-12 min-h-screen">
     <!-- Background Video -->
     <div class="absolute top-0 left-0 w-full h-full -z-10">
-        <video autoplay loop muted class="w-full h-full object-cover opacity-30">
+        <video autoplay loop muted class="w-full h-full object-cover">
             <source src="Video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
 
-    <div class="relative z-10 container mx-auto px-6 md:px-12">
+    <div class="relative z-10 container mx-auto px-6 md:px-12 min-h-full">
         <!-- Section Header -->
         <div class="text-center mb-12">
             <h2 class="text-4xl font-bold text-white mb-4">About Nyra Dialog Maker</h2>
@@ -233,7 +234,6 @@
         </div>
     </div>
 </section>
-
 
 
         <!-- Changelogs Section -->
