--- a/index.html
+++ b/index.html
@@ -192,17 +192,20 @@
             </div>
         </section>
 <!-- About Section -->
-<section id="about" class="relative bg-gray-900 text-white py-12">
-<section id="about" class="relative bg-gray-900 text-white py-12 min-h-screen">
-    <!-- Background Video -->
-    <div class="absolute top-0 left-0 w-full h-full -z-0">
+<section id="about" class="relative bg-gray-900 text-white py-12 h-screen overflow-hidden">
+    <!-- Background Video with Blur Effect -->
+    <div class="absolute top-0 left-0 w-full h-full -z-10">
         <video autoplay loop muted class="w-full h-full object-cover">
             <source src="Video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        <!-- Apply Blur Effect -->
+        <div class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-50" style="backdrop-filter: blur(8px);">
+        </div>
     </div>
 
-    <div class="relative z-10 container mx-auto px-6 md:px-12 min-h-full">
+    <!-- Main Content -->
+    <div class="relative z-10 container mx-auto px-6 md:px-12 h-full flex flex-col justify-center">
         <!-- Section Header -->
         <div class="text-center mb-12">
             <h2 class="text-4xl font-bold text-white mb-4">About Nyra Dialog Maker</h2>
@@ -211,7 +214,7 @@
             </p>
         </div>
 
-        <!-- Post Information -->
+        <!-- Post Information Box -->
         <div class="bg-gray-800 rounded-xl shadow-lg p-8 md:p-12 mx-auto max-w-3xl">
             <div class="flex flex-col md:flex-row items-center justify-between mb-8">
                 <div class="mb-6 md:mb-0">
