--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
     </div>
 </section>
 
-        <section id="faq" class="bg-gray-800 text-white py-12">
+        <section id="faq" class="hidden-section ripple-effect bg-gray-800 text-white py-12">
+
     <div class="container mx-auto px-6 md:px-12">
         <!-- FAQ Header -->
         <div class="text-center mb-12">
