--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
             <!-- Links and FAQs -->
             <div class="text-center mt-8">
                 <a href="#contact" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg transition duration-300">Contact Us</a>
-                <a href="#faq" class="inline-block bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg transition duration-300 ml-4">FAQs</a>
-                  </div>
+                <a href="#" class="inline-block bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg transition duration-300 ml-4" onclick="showSection('faq')">FAQs</a>
+   </div>
         </div>
     </div>
 </section>
