--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <!-- App Image -->
                 <center>
                     <div class="w-full md:w-1/2 p-4">
-                        <img src="https://i.ibb.co/QnfhWht/20240818-175737.png" alt="Nyra Dialog Maker" height="420" width="280" class="rounded-lg shadow-lg">
+                        <img src="https://i.ibb.co/QnfhWht/20240818-175737.png" loading="lazy" alt="Nyra Dialog Maker" height="420" width="280" class="rounded-lg shadow-lg">
                     </div>
                 </center>
 
