--- a/index.html
+++ b/index.html
@@ -212,16 +212,25 @@
 
         <!-- Post Information -->
         <div class="bg-gray-800 rounded-xl shadow-lg p-8 md:p-12 mx-auto max-w-3xl">
-            <div class="flex flex-col md:flex-row items-center justify-between mb-8">
-                <div class="mb-6 md:mb-0">
-                    <h3 class="text-2xl font-semibold mb-2">Posted by:</h3>
-                    <p class="text-xl font-medium text-blue-400">Cutex</p>
-                </div>
-                <div>
-                    <h3 class="text-2xl font-semibold mb-2">Posted on:</h3>
-                    <p class="text-xl font-medium text-blue-400">2024-09-08</p>
-                </div>
+    <div class="flex flex-col md:flex-row items-center justify-between mb-8">
+        <!-- Posted by with DP -->
+        <div class="flex items-center mb-6 md:mb-0">
+            <!-- DP (Profile Image) -->
+            <img src="dp" alt="Developer DP" class="w-12 h-12 rounded-full mr-4">
+            <!-- Text for Posted by -->
+            <div>
+                <h3 class="text-2xl font-semibold mb-2">Posted by:</h3>
+                <p class="text-xl font-medium text-blue-400">Cutex</p>
             </div>
+        </div>
+        <!-- Posted on -->
+        <div>
+            <h3 class="text-2xl font-semibold mb-2">Posted on:</h3>
+            <p class="text-xl font-medium text-blue-400">2024-09-08</p>
+        </div>
+    </div>
+</div>
+
 
             <!-- Links and FAQs -->
             <div class="text-center mt-8">
