--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <!-- Posted by with DP -->
         <div class="flex items-center mb-6 md:mb-0">
             <!-- DP (Profile Image) -->
-            <img src="dp" alt="Developer DP" class="w-12 h-12 rounded-full mr-4">
+            <img src="dp.png" alt="Developer DP" class="w-12 h-12 rounded-full mr-4">
             <!-- Text for Posted by -->
             <div>
                 <h3 class="text-2xl font-semibold mb-2">Posted by:</h3>
